# miko

./: .gitignore  ENV_SETUP_README.md  INTEGRATION_README.md  README.md  build-bpf.ps1  deploy-check.js  deploy-devnet.ps1  docker-compose.yml  integration-test.js  package-lock.json  setup-env.ps1  setup-env.sh  setup-integration.ps1  setup-integration.sh  test-vault.js
.github/workflows/: ci.yml
backend/: server.ts
backend/db/: prisma.ts
backend/middlewares/: auth.ts
contracts/: Anchor.toml  CONTRACT_STATUS.md  IDL_USAGE.md  TEST_RESULTS.md  build-fix.ps1  test-vault.js
contracts/programs/private_swap_vault/: Cargo.toml  package-lock.json  package.json  simple-test.js  test-live-devnet.js  tsconfig.json
contracts/programs/private_swap_vault/src/: error.rs  lib.rs  state.rs
contracts/programs/private_swap_vault/tests/: vault_test.ts
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SOLUTION.md  proof_flow.md  system_diagram.md  zk_constraints.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
prisma/: schema.prisma
programs/: devnet-test.js  final-verification.js  test-api.js
relayer/: .env.example  AMOUNT_VALIDATION_GUIDE.md  Dockerfile  FIXES_APPLIED.md  README.md  SWAGGER_GUIDE.md  generate-keypair.js  index.ts  intentQueue.ts  jupiter.ts  monitor.ts  package-lock.json  package.json  submitProof.ts  tsconfig.json  utils.ts  zkMock.ts
scripts/: deploy.ts  faucet.ts  reset.ts
zk-coprocessor/: README.md  risczero.toml  setup-wsl.sh
zk-coprocessor/host/: Cargo.toml
zk-coprocessor/host/src/: main.rs
(+46 files in other folders)
