[package]
name = "private-swap-host"
version = "0.1.0"
edition = "2021"

[features]
default = []
risc0 = ["risc0-zkvm/prove"]

[dependencies]
risc0-zkvm = { version = "0.20", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"

[[bin]]
name = "private-swap-prover"
path = "src/main.rs" 