[package]
name = "private_swap_vault"
version = "0.1.0"
description = "Private swap vault program using Anchor and SPL Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_swap_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
